Переписал методы под Java 8